# local-agent-chat

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  SKILL.md  STATUS.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml
examples/: agent-poll.sh  agent-sse.py  discover-service.sh  nanook-presence.sh  sibling-agent.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.js  utils.js
frontend/src/components/: AdminKeyModal.jsx  ChatArea.jsx  ChatHeader.jsx  ChatLogo.jsx  DateSeparator.jsx  DmSection.jsx  EmojiPicker.jsx  FileCard.jsx  MentionAutocomplete.jsx  MentionsPanel.jsx  MessageBubble.jsx  MessageGroup.jsx  MessageInput.jsx  ParticipantPanel.jsx  PinnedPanel.jsx  ProfileModal.jsx  (+10 more)
sdk/python/: README.md  agent_chat.py  pyproject.toml  test_sdk.py
src/: db.rs  events.rs  lib.rs  main.rs  mdns.rs  models.rs  rate_limit.rs  retention.rs  routes.rs  webhooks.rs
src/routes/: bookmarks.rs  broadcast.rs  discover.rs  dm.rs  export.rs  files.rs  incoming_hooks.rs  mentions.rs  messages.rs  mod.rs  participants.rs  pins.rs  presence.rs  profiles.rs  reactions.rs  read_positions.rs  rooms.rs  search.rs  stream.rs  system.rs  threads.rs  typing.rs  webhook_routes.rs
tests/: integration.rs
tests/integration/: activity.rs  archiving.rs  bookmarks.rs  broadcast.rs  common.rs  cross_feature.rs  cross_feature_v2.rs  discover.rs  dm.rs  edit_delete.rs  edit_history.rs  export.rs  files.rs  health_stats.rs  incoming_webhooks.rs  main.rs  mentions.rs  messages.rs  pagination.rs  participants.rs  pins.rs  presence.rs  profiles.rs  rate_limit_config.rs  reactions.rs  read_positions.rs  retention.rs  rooms.rs  search.rs  system.rs  threading.rs  threads.rs  typing.rs  validation.rs  webhooks.rs
(+4 files in other folders)
