[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-chat"
version = "0.1.0"
description = "Python SDK for Local Agent Chat — LAN-first chat for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Humans Not Required"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Humans-Not-Required/local-agent-chat"
Repository = "https://github.com/Humans-Not-Required/local-agent-chat"
Documentation = "https://github.com/Humans-Not-Required/local-agent-chat/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["agent_chat"]
